Implement user registration with Mongoose and add database connection

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts"
-    
   },
   "keywords": [],
   "author": "",
@@ -22,6 +21,7 @@
     "express-validator": "^7.2.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10"
   },
