--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "express-validator": "^7.2.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.0",
+    "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.3",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
