--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@types/axios": "^0.9.36",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
