--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/date-fns": "^2.5.3",
     "@types/http-errors": "^2.0.4",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
